2002-10-23  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.[ch]: rewrote code that 
	handles suffix.

	* autotrace.c (at_splines_write): Use output_pstoedit_invoke_writer
	if output_pstoedit_is_writer returns true for output_writer.

	* HACKING: Updated about autotools.

2002-10-22  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (remove_temporary_file): Renamed
	from remove_tmpfile.
	(output_pstoedit_writer): Make static.

	* pxl-outline.[ch]: removed unsed ifdefs.

2002-10-22  Martin Weber <martweb@gmx.net>

	* pxl-outline.c: Big changes that fix a bug 
	related to centerline tracing.

2002-10-21  Martin Weber <martweb@gmx.net>

	* input-magick.c: Checked autotrace works with
	ImageMagick-5.5.2.

	Message-ID: <3DB448EA.E3A63661@gmx.net>.

2002-10-20  Masatake YAMATO  <yamato@redhat.com>

	* autogen.sh: checked aclocal-1.4, automake-1.4
	and autoconf-2.53 are available or not.

	* autotrace.h: defined N_ and _ only if they are
	not defined.

2002-10-10  Martin Weber <martweb@gmx.net>

	* autotrace.1: updated again.

2002-10-10  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Use ' instead of " to retrieve
	MAGICK_MAJOR_VERSION.

2002-10-10  Martin Weber <martweb@gmx.net>

	* autotrace.1: updated.

2002-10-10  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE2): added <real> to width-factor.

2002-10-09  Masatake YAMATO  <yamato@redhat.com>

	* FAQ: Fix a typo. Suggested by Martin.

	* configure.in: version 0.30.8.
	Updated cocuments.

2002-10-08  Martin Weber <martweb@gmx.net>

	* input-magick.c (input_magick_reader): Use AT_ macros.
	antialiasing is switched off. Update comments. autotrace
	is ready for ImageMagick 5.4.9.

	Message-ID: <3DA2FFF4.5D564F9@gmx.net>.
	
2002-10-08  Martin Weber <martweb@gmx.net>

	* fit.c (split_at_corners, fit_curve_list): 
	handle very small objects.

	Message-ID: <3DA1C87D.786E8E52@gmx.net>
	Message-ID: <3DA1DB6F.1DDA16A1@gmx.net>
	
2002-10-08  Masatake YAMATO  <yamato@redhat.com>
