@@ -8,7 +8,7 @@ autotrace.dsp autotrace.dsw					\
 autotrace.m4 shape_cubic.c.diff README.MING			\
 libming.dsw libming.dsp						\
 autotrace.sln autotrace.vcproj libming.sln libming.vcproj	\
-autotrace.pc.in autotrace.spec.in TODO HACKING
+autotrace.pc.in autotrace.spec.in TODO HACKING FAQ
 
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
